Peticion de frases por categoria implementada. Pagina de frases implementada.

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 <img src="https://api.chucknorris.io/img/chucknorris_logo_coloured_small@2x.png" alt="">
-<table id="categories">
-
-</table>
-<script src="/dist/bundle.js"></script>
+<table id="categories"></table>
+<script src="/dist/index.js"></script>
 </body>
 </html>
