--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 <body>
 <img src="https://api.chucknorris.io/img/chucknorris_logo_coloured_small@2x.png" alt="">
 <table id="categories"></table>
+<button id="fraseAleatoriaBoton">Generame una frase</button>
 <script src="/dist/index.js"></script>
 </body>
 </html>
